--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
                 <h2>Paris</h2>
             </div>
             
-            <div class="destination" id="paris">
+            <div class="destination" id="havana">
                 <h2>Havana</h2>
+            </div>
+                        
+            <div class="destination" id="barcelona">
+                <h2>Barcelona</h2>
             </div>
         </div>
     </div>
