--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <h2>Paris</h2>
             </div>
             
-            <div class="destination" id="havana">
+            <div class="destination" id="florida">
                 <h2>Havana</h2>
             </div>
                         
-            <div class="destination" id="barcelona">
+            <div class="destination" id="paris">
                 <h2>Barcelona</h2>
             </div>
         </div>
