--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <div class="destination" id="florida">
                 <h2>Rome</h2>
             </div>
+                               
+            <div class="destination" id="paris">
+                <h2>Guadlope</h2>
+            </div>
         </div>
     </div>
 
