--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <div class="destination" id="paris">
                 <h2>Guadlope</h2>
             </div>
+                                           
+            <div class="destination" id="florida">
+                <h2>Istanbul</h2>
+            </div>
         </div>
     </div>
 
