--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div class="destination" id="florida">
                 <h2>Havana</h2>
             </div>
+                        
+            <div class="destination" id="florida">
+                <h2>Havana</h2>
+            </div>
         </div>
     </div>
 
